# ServerSync

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: config.rs  file_system.rs  main.rs  merge_toml.rs  merger.rs
