[package]
name = "server_sync"
authors = ["Racci"]
repository = "https://github.com/DaRacci/ServerSync"

categories = ["server", "sync", "repo"]
keywords = ["server", "sync", "repo", "template"]
description = "Syncronizes your server with a git repository and supports templaing."

license = "MIT"
readme = "README.md"

version = "0.2.6"
edition = "2021"

[dependencies]
simplelog = { version = "^0.12.0", features = ["paris"] }
handlebars = "4.3.5"
walkdir = "2.3.2"
envfile = "0.2.1"
anyhow = "1.0.65"
similar = "2.2.0"
clap = { version = "4.0.13", features = ["derive", "cargo", "env"] }
file-owner = "0.1.1"
simdutf8 = "0.1.4"
